fix: api 문서 오류 수정
